--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		body {
     font-family: 'Sarabun', sans-serif;
     /* แก้ไขบรรทัดด้านล่างนี้ */
-    background-image: linear-gradient(rgba(3, 3, 3, 0.8), rgba(3, 3, 3, 0.8)), url('https://cdn.discordapp.com/attachments/1424038749624471814/1435994434499252335/IMG20251014111401.jpg?ex=694bf408&is=694aa288&hm=feb652adf75656033eeb65ece5e993b6ec856eff5be476a1e3e232756fe11685&');
+    background-image: linear-gradient(rgba(3, 3, 3, 0.8), rgba(3, 3, 3, 0.8)), url('https://discord.com/channels/1327227929360334879/1327227929813454878/1453058133848097010;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
