--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ body.dark-mode #ghost-desc {
             </div>
 
             <!-- Ghost List -->
-            <div class="gray-600 p-6 rounded-lg border border-gray-200 flex-1 flex flex-col h-[500px]">
+            <div class="journal-paper p-6 rounded-lg border border-gray-200 flex flex-col min-h-[400px] lg:h-[600px]">
                 <h2 class="text-xl font-bold mb-4 flex items-center gap-2">
                     <span>📋</span> รายชื่อวิญญาณ (Ghost Directory)
                 </h2>
