--- a/index.html
+++ b/index.html
@@ -568,10 +568,10 @@ body.dark-mode #ghost-desc {
 			{
                 id: 'Dayan',
                 name: 'Dayan',
-                desc: 'เป็นผีลึกลับที่จับตัวยาก มีพฤติกรรมเลียนแบบ โดยมันจะสะท้อนคุณลักษณะและพฤติกรรมของผีตนอื่น ๆ รวมถึงผีประเภทอื่นด้วย',
+                desc: 'เกิดจากดวงวิญญาณของผู้ที่ต้องทนทุกข์ทรมานอย่างแสนสาหัสจากการถูกทารุณกรรมเมื่อครั้งยังมีชีวิตอยู่ ในตอนนี้ เมื่อความตายมาเยือน เธอจึงคอยระแวดระวังทุกคนที่ "เต้นรำ" เข้ามาใกล้จนเกินไป',
                 evidence: ['emf', 'orb', 'box'], // Has 4 evidences (Orb is fake)
-                strength: 'เลียนแบบความสามารถของผีตัวอื่น (เช่น เดินเร็วเหมือน Revenant ชั่วคราว)',
-                weakness: 'จะมี Ghost Orb เป็นหลักฐานที่ 4 (ของปลอม) เสมอ',
+                strength: 'ดายันจะแข็งแกร่งขึ้นเพื่อปกป้องตนเอง หากมีผู้คน "เต้นรำ" เข้ามาใกล้เธอ',
+                weakness: 'ดายันจะสูญเสียพละกำลัง หากผู้คนที่อยู่ใกล้เธอยืนนิ่งอยู่กับที่',
                 huntThreshold: 50, // Variable
                 stats: { aggression: 5, speed: 5, stealth: 10 }
             },
